kubernetes/metabase/01-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bi
