kubernetes/metabase/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-svc
  namespace: bi
spec:
  selector:
    app: metabase
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
