kubernetes/metabase/04-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: bi
  annotations:
    # Traefik을 사용하는 K3s 기본 설정
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: bi.lab.sonagi.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase-svc
                port:
                  number: 3000
